# python-time-space-complexity

./: .gitignore  .project  .subagent_progress.json  .subagent_prompt.md  AGENTS.md  COMPLETENESS_REVIEW_PROMPT.md  CONTRIBUTING.md  CORRECTNESS_REVIEW_PROMPT.md  DEV_GUIDE.md  DOCUMENTATION_REVIEW_PROMPT.md  DOCUMENTATION_STATUS.md  Makefile  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SETUP.md  SUBAGENT_GUIDE.md  SWARM_QUICK_START.md  SWARM_README.md  SWARM_SUMMARY.md  TESTING_REPORT.md  UV_MIGRATION_SUMMARY.md  launch_review_swarm.sh  mkdocs.yml  pyproject.toml  subagent_coordinator.py  subagent_worker.py
.github/workflows/: deploy.yml
data/: documentation_audit.json
docs/: index.md  llms.txt
docs/.well-known/: security.txt
docs/builtins/: abs.md  aiter.md  all.md  anext.md  any.md  ascii.md  bin.md  bool.md  bool_func.md  breakpoint.md  bytearray_func.md  bytes.md  bytes_func.md  callable.md  chr.md  classmethod.md  compile.md  complex_func.md  delattr.md  dict.md  dict_func.md  dir.md  divmod.md  ellipsis.md  enumerate.md  eval.md  exceptions.md  exec.md  exit_quit.md  false.md  filter.md  float.md  float_func.md  format.md  frozenset.md  frozenset_func.md  getattr.md  globals.md  hasattr.md  hash.md  (+49 more)
docs/implementations/: cpython.md  index.md  ironpython.md  jython.md  pypy.md
docs/stdlib/: abc.md  aifc.md  annotationlib.md  argparse.md  array.md  ast.md  asynchat.md  asyncio.md  asyncore.md  base64.md  bisect.md  bz2.md  calendar.md  cgi.md  cgitb.md  chunk.md  cmath.md  codecs.md  collections.md  colorsys.md  compression.md  concurrent_futures.md  configparser.md  contextlib.md  contextvars.md  copy.md  counter.md  crypt.md  csv.md  dataclasses.md  datetime.md  dbm.md  decimal.md  defaultdict.md  deque.md  difflib.md  distutils.md  email.md  enum.md  filecmp.md  (+119 more)
docs/stylesheets/: extra.css
docs/versions/: index.md  py310.md  py311.md  py312.md  py313.md  py314.md  py39.md
scripts/: audit_documentation.py  count_complexity_rows.py  estimate_complexity.py  generate_docs.py  introspect.py  validate_data.py
tests/: test_builtin_complexity.py  test_collections_complexity.py  test_complexity_estimator_feature.py  test_difflib_complexity.py  test_documentation.py  test_heapq_complexity.py  test_introspect.py
