[project]
name = "python-time-space-complexity"
version = "0.1.0"
description = "Comprehensive documentation of time and space complexity for Python built-ins and standard library"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Python Complexity Contributors" }
]
requires-python = ">=3.8"
keywords = [
    "complexity",
    "time-complexity",
    "space-complexity",
    "python",
    "documentation",
    "performance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development",
]

dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/python-time-space-complexity"
Documentation = "https://pythoncomplexity.com"
Repository = "https://github.com/yourusername/python-time-space-complexity.git"
Issues = "https://github.com/yourusername/python-time-space-complexity/issues"

# uv dependency groups configuration
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "pyyaml>=6.0",
]

[tool.ruff]
target-version = "py38"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "site",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["python_time_space_complexity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
